--- a/kuangshen/0.1.1.md
+++ b/kuangshen/0.1.1.md
@@ -219,7 +219,7 @@ func main() {
 
 ### 变量的交换
 
-![image-20230204205409751](Go语言基础语法.assets/image-20230204205409751.png)
+![image-20230204205409751](images/image-20230204205409751.png)
 
 ```go
 package main
@@ -253,7 +253,7 @@ func main() {
 
 ### 理解变量（内存地址）
 
-![image-20230204210354121](Go语言基础语法.assets/image-20230204210354121.png)
+![image-20230204210354121](images/image-20230204210354121.png)
 
 ```go
 package main
