--- a/kuangshen/0.1.0.md
+++ b/kuangshen/0.1.0.md
@@ -951,4 +951,4 @@ fmt.Printf("a = %d, b = %d, c = %d\n", a, b, c)
 ## links
 
 * [目录](<preface.md>)
-* 下一节: [Go语言基础语法](<0.1.0.md>)
+* 下一节: [变量常量](<0.1.1.md>)
