--- a/kuangshen/0.1.1.md
+++ b/kuangshen/0.1.1.md
@@ -1,4 +1,4 @@
-## Go语言基础语法-变量常量
+## 变量常量
 
 > 上节课关于程序启动的回答。
 
@@ -503,7 +503,7 @@ https://www.bilibili.com/video/BV1ni4y1G7B9
 ## links
 
 * [目录](<preface.md>)
-* 下一节: [安装Go](<0.1.2.md>)
+* 下一节: [数据类型与运算符](<0.1.2.md>)
 
 
 
