--- a/kuangshen/0.1.2.md
+++ b/kuangshen/0.1.2.md
@@ -1,4 +1,4 @@
-## Go语言基础语法-数据类型与运算符
+## 数据类型与运算符
 
 ## 昨日回顾
 
@@ -557,27 +557,4 @@ func main() {
 ## links
 
 * [目录](<preface.md>)
-* 下一节: [安装Go](<0.1.3.md>)
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+* 下一节: [流程结构](<0.1.3.md>)
